@@ -29,7 +29,7 @@ CREATE TABLE services (
   algorithm		int(1)		DEFAULT '0' NOT NULL,
   triggerid		int(4),
   showsla		int(1)		DEFAULT '0' NOT NULL,
-  goodsla		int(4)		DEFAULT '99.9' NOT NULL,
+  goodsla		double(3,2)	DEFAULT '99.9' NOT NULL,
   PRIMARY KEY (serviceid)
 ) type=InnoDB;
 
