@@ -1,0 +1,1 @@
+alter table services modify goodsla double(3,2) default '99.9' not null;
